chore: 更新依赖版本和配置
- 升级 rose-java 版本至 0.0.2
- 添加 flatten.mode 配置为 ossrh
- 更新父 pom 版本号格式

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.github.rosestack</groupId>
     <artifactId>rose-build</artifactId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>0.1.2</version>
     <relativePath/>
   </parent>
   <groupId>io.github.rosestack</groupId>
@@ -24,6 +24,8 @@
   <properties>
     <revision>0.0.1-SNAPSHOT</revision>
     <java.version>17</java.version>
+
+    <flatten.mode>ossrh</flatten.mode>
   </properties>
 
 </project>
