refactor(spring-context): 重构包结构并更新依赖导入
将工具类从 io.github.rosestack.core.util 包移动到 io.github.rosestack.util 包，更新相关导入语句。主要变更包括：

- 移动 SpringThreadUtilsTest.java 测试文件
- 更新 FieldSensitiveSerializer、LoggingRequestFilter、Sensitive 等类的导入路径
- 优化 pom.xml 配置，添加项目元数据信息

此重构旨在统一包结构，提高代码组织性，不涉及功能变更。

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,40 @@
 
   <name>Rose :: Spring</name>
   <description>Rose Spring</description>
+  <url>https://github.com/rosestack/rose-spring</url>
+
+  <organization>
+    <name>RoseStack</name>
+    <url>https://github.com/rosestack</url>
+  </organization>
+
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <id>chensoul</id>
+      <name>Chensoul</name>
+      <email>ichensoul@gmail.com</email>
+      <organization>RoseStack</organization>
+      <roles>
+        <role>lead</role>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+    </developer>
+  </developers>
+
+  <scm>
+    <url>https://github.com/rosestack/rose-spring</url>
+    <connection>scm:git:git://github.com/rosestack/rose-spring.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/rosestack/rose-spring.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
   <modules>
     <module>rose-spring-bom</module>
