--- a/rose-spring-context/pom.xml
+++ b/rose-spring-context/pom.xml
@@ -66,5 +66,9 @@
       <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>io.github.rosestack</groupId>
+          <artifactId>rose-java-core</artifactId>
+      </dependency>
   </dependencies>
 </project>
